exports[`BpkLoadingButton should add only bpk specific classes if className prop is set to empty string 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large bpk-loading-button bpk-loading-button--secondary"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly 1`] = `
<button
  className="bpk-button bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "destructive selected" attributes 1`] = `
<button
  className="bpk-button bpk-button--destructive bpk-button--selected bpk-loading-button bpk-loading-button--destructive bpk-loading-button--selected"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "destructive" attributes 1`] = `
<button
  className="bpk-button bpk-button--destructive bpk-button--large bpk-loading-button bpk-loading-button--destructive"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "disabled" attributes 1`] = `
<button
  className="bpk-button bpk-button--large bpk-loading-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "featured" attributes 1`] = `
<button
  className="bpk-button bpk-button--large bpk-button--featured bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "iconOnly" attributes 1`] = `
<button
  className="bpk-button bpk-button--large bpk-button--large-icon-only bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  <span
    className="visually-hidden">
    Search
  </span>
  
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "link" attributes 1`] = `
<button
  className="bpk-button bpk-button--large bpk-button--link bpk-loading-button bpk-loading-button--link"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "loading" attributes 1`] = `
<button
  className="bpk-button bpk-button--large bpk-loading-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-spinner bpk-spinner--large bpk-spinner--align-to-large-button"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M17.704 13.853l5.709 1.855A11.96 11.96 0 0 0 24 12h-6c0 .647-.106 1.269-.296 1.853z"
      opacity=".25" />
    <path
      d="M8.478 16.847l-3.531 4.859a11.992 11.992 0 0 0 3.344 1.707l1.855-5.709a5.99 5.99 0 0 1-1.668-.857z"
      opacity=".6" />
    <path
      d="M6.296 13.853L.587 15.708a11.939 11.939 0 0 0 1.707 3.344l4.859-3.531a5.963 5.963 0 0 1-.857-1.668z"
      opacity=".7" />
    <path
      d="M10.147 17.704l-1.855 5.709A11.96 11.96 0 0 0 12 24v-6a5.977 5.977 0 0 1-1.853-.296z"
      opacity=".55" />
    <path
      d="M13.853 17.704l1.855 5.709a11.939 11.939 0 0 0 3.344-1.707l-3.531-4.859a5.963 5.963 0 0 1-1.668.857z"
      opacity=".45" />
    <path
      d="M17.704 13.853a5.963 5.963 0 0 1-.857 1.668l4.859 3.531a11.992 11.992 0 0 0 1.707-3.344l-5.709-1.855z"
      opacity=".3" />
    <path
      d="M12 18v6c1.295 0 2.54-.207 3.708-.587l-1.855-5.709A5.977 5.977 0 0 1 12 18z"
      opacity=".5" />
    <path
      d="M15.522 16.847l3.531 4.859a12.06 12.06 0 0 0 2.654-2.654l-4.859-3.531a6.043 6.043 0 0 1-1.326 1.326z"
      opacity=".35" />
    <path
      d="M6 12H0c0 1.295.207 2.54.587 3.708l5.709-1.855A5.977 5.977 0 0 1 6 12z"
      opacity=".75" />
    <path
      d="M7.153 15.522l-4.859 3.531a12.06 12.06 0 0 0 2.654 2.654l3.531-4.859a6.043 6.043 0 0 1-1.326-1.326z"
      opacity=".65" />
    <path
      d="M6.296 10.147L.587 8.292A11.96 11.96 0 0 0 0 12h6c0-.647.106-1.269.296-1.853z"
      opacity=".8" />
    <path
      d="M15.522 7.153l3.531-4.859A11.992 11.992 0 0 0 15.709.587l-1.855 5.709a5.99 5.99 0 0 1 1.668.857z"
      opacity=".05" />
    <path
      d="M17.704 10.147l5.709-1.855a11.939 11.939 0 0 0-1.707-3.344l-4.859 3.531c.367.503.66 1.063.857 1.668z"
      opacity=".15" />
    <path
      d="M18 12h6c0-1.295-.207-2.54-.587-3.708l-5.709 1.855c.19.584.296 1.206.296 1.853z"
      opacity=".2" />
    <path
      d="M16.847 8.478l4.859-3.531a12.06 12.06 0 0 0-2.654-2.654l-3.531 4.859c.509.371.956.818 1.326 1.326z"
      opacity=".1" />
    <path
      d="M7.153 8.478l-4.86-3.53A11.95 11.95 0 0 0 .587 8.292l5.709 1.855c.197-.605.49-1.165.857-1.669z"
      opacity=".85" />
    <path
      d="M8.478 7.153l-3.53-4.86a12.07 12.07 0 0 0-2.655 2.655l4.859 3.531a6.043 6.043 0 0 1 1.326-1.326z"
      opacity=".9" />
    <path
      d="M12 6V0c-1.295 0-2.54.207-3.708.587l1.855 5.709A5.977 5.977 0 0 1 12 6z" />
    <path
      d="M10.147 6.296L8.292.587a11.95 11.95 0 0 0-3.344 1.706l3.531 4.859a5.986 5.986 0 0 1 1.668-.856z"
      opacity=".95" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "secondary" attributes 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large bpk-loading-button bpk-loading-button--secondary"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "large" and "selected" attributes 1`] = `
<button
  className="bpk-button bpk-button--selected bpk-button--large bpk-loading-button bpk-loading-button--selected"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "link selected" attributes 1`] = `
<button
  className="bpk-button bpk-button--selected bpk-button--link bpk-loading-button bpk-loading-button--selected bpk-loading-button--link"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with "secondary selected" attributes 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--selected bpk-loading-button bpk-loading-button--secondary bpk-loading-button--selected"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "destructive" attribute 1`] = `
<button
  className="bpk-button bpk-button--destructive bpk-loading-button bpk-loading-button--destructive"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "disabled" attribute 1`] = `
<button
  className="bpk-button bpk-loading-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "featured" attribute 1`] = `
<button
  className="bpk-button bpk-button--featured bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "href" attribute 1`] = `
<a
  className="bpk-button bpk-loading-button"
  href="#"
  onClick={null}>
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</a>
`;

exports[`BpkLoadingButton should render correctly with a "icon" attribute 1`] = `
<button
  className="bpk-button bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 4C9.8 4 8 5.8 8 8H7v12h10V8h-1c0-2.2-1.8-4-4-4zm0 2c1.103 0 2 .897 2 2h-4c0-1.103.897-2 2-2zM4 8h1v12H4c-1.1 0-2-.9-2-2v-8c0-1.1.9-2 2-2zm18 2v8c0 1.1-.9 2-2 2h-1V8h1c1.1 0 2 .9 2 2z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "iconDisabled" attribute 1`] = `
<button
  className="bpk-button bpk-loading-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 4C9.8 4 8 5.8 8 8H7v12h10V8h-1c0-2.2-1.8-4-4-4zm0 2c1.103 0 2 .897 2 2h-4c0-1.103.897-2 2-2zM4 8h1v12H4c-1.1 0-2-.9-2-2v-8c0-1.1.9-2 2-2zm18 2v8c0 1.1-.9 2-2 2h-1V8h1c1.1 0 2 .9 2 2z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "iconLoading" attribute 1`] = `
<button
  className="bpk-button bpk-loading-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 4C9.8 4 8 5.8 8 8H7v12h10V8h-1c0-2.2-1.8-4-4-4zm0 2c1.103 0 2 .897 2 2h-4c0-1.103.897-2 2-2zM4 8h1v12H4c-1.1 0-2-.9-2-2v-8c0-1.1.9-2 2-2zm18 2v8c0 1.1-.9 2-2 2h-1V8h1c1.1 0 2 .9 2 2z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "iconOnly" attribute 1`] = `
<button
  className="bpk-button bpk-button--icon-only bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  <span
    className="visually-hidden">
    Search
  </span>
  
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "iconSelected" attribute 1`] = `
<button
  className="bpk-button bpk-button--selected bpk-loading-button bpk-loading-button--selected"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M12 4C9.8 4 8 5.8 8 8H7v12h10V8h-1c0-2.2-1.8-4-4-4zm0 2c1.103 0 2 .897 2 2h-4c0-1.103.897-2 2-2zM4 8h1v12H4c-1.1 0-2-.9-2-2v-8c0-1.1.9-2 2-2zm18 2v8c0 1.1-.9 2-2 2h-1V8h1c1.1 0 2 .9 2 2z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "large" attribute 1`] = `
<button
  className="bpk-button bpk-button--large bpk-loading-button"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "link" attribute 1`] = `
<button
  className="bpk-button bpk-button--link bpk-loading-button bpk-loading-button--link"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "loading" attribute 1`] = `
<button
  className="bpk-button bpk-loading-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-spinner bpk-spinner--align-to-button"
    height="18"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M13.278 10.39l4.282 1.391A8.97 8.97 0 0 0 18 9h-4.5a4.5 4.5 0 0 1-.222 1.39z"
      opacity=".25" />
    <path
      d="M6.359 12.635L3.71 16.28c.764.556 1.61.988 2.508 1.28l1.391-4.281a4.492 4.492 0 0 1-1.25-.643z"
      opacity=".6" />
    <path
      d="M4.722 10.39L.44 11.78a8.954 8.954 0 0 0 1.28 2.508l3.645-2.648a4.472 4.472 0 0 1-.643-1.251z"
      opacity=".7" />
    <path
      d="M7.61 13.278L6.22 17.56A8.97 8.97 0 0 0 9 18v-4.5c-.472 0-.941-.075-1.39-.222z"
      opacity=".55" />
    <path
      d="M10.39 13.278l1.391 4.282a8.954 8.954 0 0 0 2.508-1.28l-2.648-3.645c-.38.28-.803.496-1.251.643z"
      opacity=".45" />
    <path
      d="M13.278 10.39c-.147.448-.364.87-.643 1.25l3.644 2.649a8.994 8.994 0 0 0 1.28-2.508l-4.281-1.391z"
      opacity=".3" />
    <path
      d="M9 13.5V18a8.97 8.97 0 0 0 2.781-.44l-1.391-4.282A4.483 4.483 0 0 1 9 13.5z"
      opacity=".5" />
    <path
      d="M11.642 12.635l2.648 3.644a9.045 9.045 0 0 0 1.99-1.99l-3.644-2.648a4.532 4.532 0 0 1-.994.994z"
      opacity=".35" />
    <path
      d="M4.5 9H0c0 .971.155 1.905.44 2.781l4.282-1.391A4.483 4.483 0 0 1 4.5 9z"
      opacity=".75" />
    <path
      d="M5.365 11.642L1.72 14.29a9.045 9.045 0 0 0 1.991 1.99l2.648-3.644a4.532 4.532 0 0 1-.994-.994z"
      opacity=".65" />
    <path
      d="M4.722 7.61L.44 6.22A8.97 8.97 0 0 0 0 9h4.5c0-.485.08-.952.222-1.39z"
      opacity=".8" />
    <path
      d="M11.642 5.365L14.29 1.72A8.994 8.994 0 0 0 11.782.44L10.39 4.722c.449.147.87.364 1.252.643z"
      opacity=".05" />
    <path
      d="M13.278 7.61l4.282-1.39a8.954 8.954 0 0 0-1.28-2.508L12.635 6.36c.276.378.495.798.643 1.251z"
      opacity=".15" />
    <path
      d="M13.5 9H18a8.97 8.97 0 0 0-.44-2.781L13.278 7.61c.143.438.222.905.222 1.39z"
      opacity=".2" />
    <path
      d="M12.635 6.359L16.28 3.71a9.045 9.045 0 0 0-1.99-1.99l-2.648 3.644c.382.278.717.614.994.995z"
      opacity=".1" />
    <path
      d="M5.365 6.359L1.72 3.71A8.963 8.963 0 0 0 .44 6.219L4.722 7.61c.148-.454.367-.873.643-1.252z"
      opacity=".85" />
    <path
      d="M6.359 5.365L3.71 1.72a9.053 9.053 0 0 0-1.99 1.99l3.644 2.648a4.51 4.51 0 0 1 .995-.994z"
      opacity=".9" />
    <path
      d="M9 4.5V0a8.97 8.97 0 0 0-2.781.44L7.61 4.722A4.483 4.483 0 0 1 9 4.5z" />
    <path
      d="M7.61 4.722L6.22.44a8.963 8.963 0 0 0-2.508 1.28L6.36 5.364a4.49 4.49 0 0 1 1.251-.642z"
      opacity=".95" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "secondary" attribute 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-loading-button bpk-loading-button--secondary"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should render correctly with a "selected" attribute 1`] = `
<button
  className="bpk-button bpk-button--selected bpk-loading-button bpk-loading-button--selected"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-button bpk-icon--rtl-support"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;

exports[`BpkLoadingButton should respect the class names entered as a string 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large bpk-loading-button custom-class-1 custom-class-2 bpk-loading-button--secondary"
  disabled={false}
  onClick={null}
  type="button">
  My button
   
  <svg
    className="bpk-icon--align-to-large-button bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7 0-.2 0-.4-.1-.6-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z" />
  </svg>
</button>
`;
